--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,3 @@
-authentication.jwt.secret = hashPCM
-authentication.jwt.issuer = PCM
-authentication.jwt.audience =  PCM
-authentication.jwt.clockSkew = 10
-authentication.jwt.validFor = 60
-authentication.jwt.claimNames.plattform = plattform
+n28.token.algorithm = DESede
+n28.token.transformation = DESede/CBC/PKCS5Padding
+n28.token.key = hashPCM
