--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 n28.token.algorithm = DESede
 n28.token.transformation = DESede/CBC/PKCS5Padding
-n28.token.key = hashPCM
+n28.token.charcode = UTF-8
+n28.token.key = EMTPEMTPEMTPEMTPEMTPEMTP
