--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 n28.token.algorithm = DESede
-n28.token.transformation = DESede/CBC/PKCS5Padding
+n28.token.encode.transformation = DESede/CBC/PKCS5Padding
+n28.token.decode.transformation = DESede/CBC/NoPadding
 n28.token.charcode = UTF-8
-n28.token.key = EMTPEMTPEMTPEMTPEMTPEMTP
+n28.token.key = 0123456789abcdefghijklmn
