--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,10 @@
+# Encriptación Token (3DES)
 n28.token.algorithm = DESede
 n28.token.encode.transformation = DESede/CBC/PKCS5Padding
 n28.token.decode.transformation = DESede/CBC/NoPadding
 n28.token.charcode = UTF-8
 n28.token.key = 0123456789abcdefghijklmn
+
+# Encriptación MAC (DES)
+n28.mac.algorithm = DES
+n28.mac.key = 01234567
