Implementando cifrado DES/CBC

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,9 @@ n28.token.decode.transformation = DESede/CBC/NoPadding
 n28.token.charcode = UTF-8
 n28.token.key = 0123456789abcdefghijklmn
 
-# Encriptación MAC (DES)
-n28.mac.algorithm = DES
-n28.mac.key = 01234567
+# Encriptación MACCCT (DES)
+n28.maccct.algorithm = DES
+n28.maccct.encode.transformation = DES/CBC/PKCS5Padding
+n28.maccct.decode.transformation = DES/CBC/NoPadding
+n28.maccct.charcode = UTF-8
+n28.maccct.key = 01234567
