--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,4 +10,4 @@ n28.mac.algorithm = DES
 n28.mac.encode.transformation = DES/CBC/PKCS5Padding
 n28.mac.decode.transformation = DES/CBC/NoPadding
 n28.mac.charcode = UTF-8
-n28.mac.key = 0123456789abcdefghijklmn
+n28.mac.key = password
