--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,9 @@ n28.mac.encode.transformation = DES/CBC/PKCS5Padding
 n28.mac.decode.transformation = DES/CBC/NoPadding
 n28.mac.charcode = UTF-8
 n28.mac.key = password
+
+# Configuración JSP
+spring.mvc.view.prefix: /WEB-INF/jsp/
+spring.mvc.view.suffix: .jsp
+
+welcome.message: Cobro Modelo N28
