Inclusión estructura presentación

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,4 +16,4 @@ n28.mac.key = password
 spring.mvc.view.prefix: /WEB-INF/jsp/
 spring.mvc.view.suffix: .jsp
 
-welcome.message: Cobro Modelo N28
+inicio.mensaje: Cobro Modelo N28
